--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,13 +42,13 @@
 
   <ng-template #stepEditor let-editor>
     <span class="config_modal">
-    <p-dialog header="Set Configuration" [modal]="true" [(visible)]="visible" [style]="{ width: '50rem' }"
-      [draggable]="false" (onHide)="toggleSelectedStepClicked()" (onShow)="reflectChanges()">
-     
-      <span class="p-float-label flex gap-2 flex-column">
-        <label>Step Name</label>
-        <input id="stepName" pInputText type="text" class="p-inputtext-sm w-20rem" [(ngModel)]="selectedStep.name"
-          (blur)="
+      <p-dialog header="Set Configuration" [modal]="true" [(visible)]="visible" [style]="{ width: '30rem' }"
+        [draggable]="false" (onHide)="toggleSelectedStepClicked()" (onShow)="reflectChanges()">
+        <div class="flex flex-column gap-3">
+          <span class="p-float-label w-full flex gap-2 flex-column">
+            <label>Step Name</label>
+            <input id="stepName" pInputText type="text" class="p-inputtext-sm w-full" [(ngModel)]="selectedStep.name"
+              (blur)="
             updateStepName(
               editor,
               'name',
@@ -57,81 +57,12 @@
               true
             );
           " />
-      </span>
-      <div class="flex flex-row gap-3 mt-4">
-        <span class="p-float-label w-full flex gap-2 flex-column">
-          <label>Email From</label>
-          <input pInputText type="text" class="p-inputtext-sm w-full" [value]="editor.step.properties.mailFrom"
-            [readonly]="editor.isReadonly" (input)="
-            updateProperty(
-              editor.step.properties,
-              'mailFrom',
-              $event,
-              editor.context
-            )
-          " />
-        </span>
-        <span class="p-float-label w-full flex gap-2 flex-column">
-          <label>Email To</label>
-          <input pInputText type="text" class="p-inputtext-sm w-full" [value]="editor.step.properties.mailTo"
-            [readonly]="editor.isReadonly" (input)="
-            updateProperty(
-              editor.step.properties,
-              'mailTo',
-              $event,
-              editor.context
-            )
-          " />
-        </span>
-      </div>
+          </span>
 
-      <div class="flex flex-row gap-3 mt-4">
-        <span class="flex w-full flex-column">
-          <span class="flex w-full flex-column gap-2">
-          <label for="date">Email trigger schedule</label>
-          <input appendTo="body" pInputText type="text" class="p-inputtext-sm w-full"
-            [value]="editor.step.properties.scheduledTime" (input)="
-            updateProperty(
-              editor.step.properties,
-              'scheduledTime',
-              $event,
-              editor.context
-            )
-          " /></span>
-           <div class="flex flex-column align-items-center">
-            <!-- <div class="flex w-19rem flex-row gap-2 p-3 text-white"
-              style="border: 1px rgb(255, 255, 255) solid;border-bottom: 0;border-top-right-radius: 5px;border-top-left-radius: 5px;background-color: #03b19e;">
-              <span><b>{{selectedDaysValue}}</b></span>
-              <span><b>{{selectedHoursValue}}</b></span>
-              <span><b>{{selectedBasedOnValue}}</b></span>
-            </div> -->
-            <div
-              style="border: 1px #CED4DA solid;border-top: 0% !important;background-color: #ffffff;width: 100%;border-radius: 5px;">
-              <div class="flex flex-row justify-content-center gap-3 scroll_value">
-                <span class="w-5rem flex flex-column text-center">
-                  <div class="pt-2">Days</div>
-                  <ng-scroll-picker [style]="{'margin':'.5em 0em'}" [data]="data"
-                    (change)="dayschange($event)"></ng-scroll-picker>
-                </span>
-                <span class="w-5rem flex flex-column text-center">
-                  <div class="pt-2">Hours</div>
-                  <ng-scroll-picker [style]="{'margin':'.5em 0em'}" [data]="data"
-                    (change)="hourschange($event)"></ng-scroll-picker>
-                </span>
-                <span class="w-5rem flex flex-column text-center">
-                  <div class="pt-2">Based On</div>
-                  <ng-scroll-picker [style]="{'margin':'.5em 0em'}" [data]="data"
-                    (change)="basedonchange($event)"></ng-scroll-picker>
-                </span>
-              </div>
-            </div>
-          </div>
-        </span>
-
-        <div class="w-full gap-2" [ngClass]="toggle ? 'hidden ':'flex flex-column'">
-          <label for="">Template</label>
-          <select class="p-inputtext-sm w-full" pInputText optionLabel="name"
-            [value]="editor.step.properties.emailTemplate" (input)="
+          <div class="w-full gap-2" [ngClass]="toggle ? 'hidden ':'flex flex-column'">
+            <label for="">Template</label>
+            <select class="p-inputtext-sm w-full" pInputText optionLabel="name"
+              [value]="editor.step.properties.emailTemplate" (input)="
           updateProperty(
             editor.step.properties,
             'emailTemplate',
@@ -139,21 +70,90 @@
             editor.context
           )
         ">
-            <option value="1">First Follow up</option>
-            <option value="2">Second Follow up</option>
-          </select>
-        </div>
-      </div>
+              <option value="1">First Follow up</option>
+              <option value="2">Second Follow up</option>
+            </select>
+          </div>
 
-      <span class="flex flex-column gap-2 mt-1">
+          <span class="p-float-label w-full flex gap-2 flex-column">
+            <label>Email From</label>
+            <input pInputText type="text" class="p-inputtext-sm w-full" [value]="editor.step.properties.mailFrom"
+              [readonly]="editor.isReadonly" (input)="
+            updateProperty(
+              editor.step.properties,
+              'mailFrom',
+              $event,
+              editor.context
+            )
+          " />
+          </span>
+          <span class="p-float-label w-full flex gap-2 flex-column">
+            <label>Email To</label>
+            <input pInputText type="text" class="p-inputtext-sm w-full" [value]="editor.step.properties.mailTo"
+              [readonly]="editor.isReadonly" (input)="
+            updateProperty(
+              editor.step.properties,
+              'mailTo',
+              $event,
+              editor.context
+            )
+          " />
+          </span>
+          <span class="flex w-full flex-column">
+            <span class="flex w-full flex-column gap-2">
+              <label for="date">Email trigger schedule</label>
+              <input appendTo="body" pInputText type="text" class="p-inputtext-sm w-full"
+                [value]="editor.step.properties.scheduledTime" (input)="
+            updateProperty(
+              editor.step.properties,
+              'scheduledTime',
+              $event,
+              editor.context
+            )
+          " />
+            </span>
+            <div class="flex flex-column align-items-center">
+              <!-- <div class="flex w-19rem flex-row gap-2 p-3 text-white"
+              style="border: 1px rgb(255, 255, 255) solid;border-bottom: 0;border-top-right-radius: 5px;border-top-left-radius: 5px;background-color: #03b19e;">
+              <span><b>{{selectedDaysValue}}</b></span>
+              <span><b>{{selectedHoursValue}}</b></span>
+              <span><b>{{selectedBasedOnValue}}</b></span>
+            </div> -->
+              <div
+                style="border: 1px #CED4DA solid;border-top: 0% !important;background-color: #ffffff;width: 100%;border-radius: 5px;">
+                <div class="flex flex-row justify-content-center gap-3 scroll_value">
+                  <span class="w-5rem flex flex-column text-center">
+                    <div class="pt-2">Days</div>
+                    <ng-scroll-picker [style]="{'margin':'.5em 0em'}" [data]="data"
+                      (change)="dayschange($event)"></ng-scroll-picker>
+                  </span>
+                  <span class="w-5rem flex flex-column text-center">
+                    <div class="pt-2">Hours</div>
+                    <ng-scroll-picker [style]="{'margin':'.5em 0em'}" [data]="data"
+                      (change)="hourschange($event)"></ng-scroll-picker>
+                  </span>
+                  <span class="w-10rem flex flex-column text-center">
+                    <div class="pt-2">Based On</div>
+                    <ng-scroll-picker [style]="{'margin':'.5em 0em'}" [data]="data"
+                      (change)="basedonchange($event)"></ng-scroll-picker>
+                  </span>
+                </div>
+              </div>
+
+            </div>
+          </span>
+        </div>
+
+
+        <!-- <span class="flex flex-column gap-2 mt-1">
         <div class="mb-3 form-check">
           <input type="checkbox" class="form-check-input" id="check1" [checked]="toggle"
             (change)="toggleCheckbox($event)" />
           <label class="form-check-label" for="check1">IsCustomTemplate</label>
         </div>
-      </span>
+      </span> -->
 
-      <div class="container" [hidden]="!toggle">
+        <!-- <div class="container" [hidden]="!toggle">
         <div class="text-black p-3" draggable="true" (dragstart)="onDragStart($event, '#Customer_Name#')">
           #Customer_Name#
         </div>
@@ -166,9 +166,9 @@
         <h4>Custom Template Editor</h4>
         <angular-editor [config]="config" (focus)="onEditorFocus($event)"
           (blur)="onEditorBlur($event)"></angular-editor>
-      </div>
-    </p-dialog>
-  </span>
+      </div> -->
+      </p-dialog>
+    </span>
 
     <!-- 
     <mat-tab-group>
